--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,7 +64,9 @@ flutter:
   assets:
     - assets/icon/
     - assets/images/onboard/
-    - assets/images/cart/
+    - assets/images/cart/chocolates/
+    - assets/images/cart/dolls/
+    - assets/images/cart/flowers/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
